# dimreduce4gpu

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.gpu  MANIFEST.in  Makefile  README.md  SECURITY.md  _native.py  docker-compose.gpu.yml  lib_dimreduce4gpu.py  mkdocs.yml  pca.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_cmake.sh  setup.cfg  setup.py
.github/workflows/: benchmarks-cpu.yml  benchmarks.yml  ci.yml  gpu-tests.yml  release.yml  wheels.yml
bench/: benchmark_cpu_vs_sklearn.py  benchmark_pca.py  run_benchmarks.py
ci/: expected_cpu_symbols.txt  expected_symbols.txt  verify_cpu_so.sh  verify_native_so.sh
dimreduce4gpu/: __init__.py  _backend.py  _native.py  cli.py  lib_dimreduce4cpu.py  lib_dimreduce4gpu.py  pca.py  truncated_svd.py
docs/: BENCHMARKS.md  COMPATIBILITY.md  CPU_BACKEND.md  GPU_TESTING.md  development.md  index.md  installation.md  troubleshooting.md
examples/: example_pca_small.py  example_tsvd_small.py
include/: cpu_backend.h  pca.h  scl.h  tsvd.h
python/: scl.py  setup.py  tsvd.py
src/: cpu_backend.cpp  device_context.cuh  matrix.cu  matrix.cuh  metric.cu  metric.cuh  pca.cu  scl.cu  tsvd.cu  tsvd.h  utils.cuh
test/: test_mat.py  test_pca_small.py  test_small.py  test_tsvd_small.py
test/benchmark/: bencmark_mat.py
tests/: conftest.py  test_api_cpu.py  test_cpu_backend.py  test_cpu_ci.py  test_math_correctness.py  test_native_locator.py  test_sklearn_parity.py  test_sklearn_parity_comprehensive.py
tsvd/: __init__.py  lib_tsvd.py  truncated_svd.py
