[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimreduce4gpu"
version = "0.1.0"
description = "Dimensionality reduction on GPUs (PCA / TruncatedSVD)"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Navdeep Gill", email = "mr.navdeepgill@gmail.com"}]
keywords = ["pca", "svd", "gpu", "cuda", "dimensionality-reduction"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/navdeep-G/dimreduce4gpu"
Repository = "https://github.com/navdeep-G/dimreduce4gpu"
Issues = "https://github.com/navdeep-G/dimreduce4gpu/issues"

[project.scripts]
dimreduce4gpu-diagnose = "dimreduce4gpu.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[tool.ruff]
extend-exclude = ["test", "dimreduce4gpu/test"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"