[metadata]
name = dimreduce4gpu
version = 0.1.0
description = Dimensionality reduction on GPUs (PCA / TruncatedSVD)
long_description = file: README.md
long_description_content_type = text/markdown
author = Navdeep Gill
author_email = mr.navdeepgill@gmail.com
url = https://github.com/navdeep-G/dimreduce4gpu
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21
    scipy>=1.7
    scikit-learn>=1.0
include_package_data = True

[options.package_data]
dimreduce4gpu =
    lib/*
